--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,17 +30,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   
-  flutter_launcher_icons: "^0.14.1"
-flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "images/logo.png"
+  google_fonts: ^6.2.1
+  cloud_firestore: ^5.4.4
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  intl: ^0.19.0
+  image_picker: ^1.1.2
+  path_provider: ^2.1.5
+  flutter_local_notifications: ^18.0.1
+  flutter_timezone: ^3.0.1
+  rxdart: ^0.28.0
+  timezone: ^0.10.0
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +57,15 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: "^0.14.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/defaultProfile.png"
+  min_sdk_android: 24
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/appIcon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,7 +80,7 @@ flutter:
   
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
