overallrating, barcharts in reciepsdetailpage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_timezone: ^3.0.1
   rxdart: ^0.28.0
   timezone: ^0.10.0
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
