--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   rxdart: ^0.28.0
   timezone: ^0.10.0
   fl_chart: ^0.69.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -63,10 +64,10 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/defaultProfile.png"
+  image_path: "assets/appIcon(1).png"
   min_sdk_android: 24
   adaptive_icon_background: "#ffffff"
-  adaptive_icon_foreground: "assets/appIcon.png"
+  adaptive_icon_foreground: "assets/appIcon(1).png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
